--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -369,8 +369,8 @@ a[href*="#contact"]::before {
          <a href="/admhome/" > Admin panel </a> </div> </div>  
        <li><a href="/admhome/" class="dash">Dashboard</a></li>  
        <li><a href="/admusers/" class="usr">Users</a></li>  
-       <li><a href="/admproducts/" class="pro"> Products </a> </li>  
-       <li><a href="/admcategories/" class="cat">Categories</a></li>  
+       <li><a href="/view_products/" class="pro"> Products </a> </li>  
+       <li><a href="/viewbrand/" class="cat">Categories</a></li>  
        <li><a href="/admorders/" class="ord"> Orders </a> </li>  
       <li><a href="/admreturns/" class="ret">Returns</a></li>  
       <li><a href="/admcoupons/" class="coup">Coupons</a></li>  
