--- a/ecom/templates/admin/admproducts.html
+++ b/ecom/templates/admin/admproducts.html
@@ -127,7 +127,7 @@
 <div id="addEmployeeModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form method="POST" action="/add_product/">
                 <div class="modal-header">						
                     <h4 class="modal-title">Add Product</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -135,60 +135,64 @@
                 <div class="modal-body">					
                     <div class="form-group">
                         <label>Name</label>
-                        <input type="text" class="form-control" required>
+                        <input name="name" type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Category</label>
-                        <input type="email" class="form-control" required>
+                        <label for="category">Category</label>
+                        <select class="form-control" id="category" name="category" required>
+                            <option value="men">Men</option>
+                            <option value="women">Women</option>
+                            <option value="women">All</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Brand</label>
-                        <input type="text" class="form-control" required>
+                        <input name="Brand" type="text" class="form-control" required>
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label>Size</label>
-                        <input type="text" class="form-control" required>
-                    </div>
+                        <input name="Size" type="text" class="form-control" required>
+                    </div> -->
                     <div class="form-group">
                         <label>No Offer Price</label>
-                        <input type="number" class="form-control" required>
+                        <input name="noofferprice" type="number" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>offer Price</label>
-                        <input type="number" class="form-control" required>
+                        <input name="offerprice" type="number" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Description</label>
-                        <textarea class="form-control" required></textarea>
+                        <textarea  name="desc" class="form-control" required></textarea>
                     </div>
                     <div class="form-group">
                         <label>Quantity</label>
-                        <input type="number" class="form-control" required>
+                        <input name="quantity" type="number" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Image 1</label>
-                        <input type="file" class="form-control image-input" accept="image/*" required>
+                        <input name="image1" type="file" class="form-control image-input" accept="image/*" required>
                         <div class="image-preview-container">
                             <img id="image-preview-1" src="#" alt="Image Preview" class="image-preview">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Image 2</label>
-                        <input type="file" class="form-control image-input" accept="image/*" required>
+                        <input name="image2" type="file" class="form-control image-input" accept="image/*" required>
                         <div class="image-preview-container">
                             <img id="image-preview-2" src="#" alt="Image Preview" class="image-preview">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Image 3</label>
-                        <input type="file" class="form-control image-input" accept="image/*" required>
+                        <input name="image3" type="file" class="form-control image-input" accept="image/*" required>
                         <div class="image-preview-container">
                             <img id="image-preview-3" src="#" alt="Image Preview" class="image-preview">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Image 4</label>
-                        <input type="file" class="form-control image-input" accept="image/*" required>
+                        <input name="image4" type="file" class="form-control image-input" accept="image/*" required>
                         <div class="image-preview-container">
                             <img id="image-preview-4" src="#" alt="Image Preview" class="image-preview">
                         </div>
