--- a/ecom/templates/admin/admusers.html
+++ b/ecom/templates/admin/admusers.html
@@ -20,88 +20,44 @@
         <div class="table-title">
             <div class=" text-center">
 
-                    <h2> <b>User</b> Details</b></h2>
+                    <h2> <b>User</b> Management</b></h2>
 
             </div>
         </div>
         <div class="row input-group ">
-            <input type="search" class="form-control rounded offset-1 col-lg-8" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="button" class="btn btn-outline-primary btn-primary col-lg-2" data-mdb-ripple-init>search</button>
+            <form action="/user_search/">
+            <input type="search"  name="searchuser" class="form-control rounded offset-1 col-lg-8" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2" data-mdb-ripple-init>search</button>
+            </form>
           </div>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-
-
                     <th>first Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
                     <th>Datejoined</th>
+                    <th>Verified user</th>
                     <th>Actions</th>
                 </tr>
             </thead>
+            {% for users in user_details  %}
             <tbody>
                 <tr>
-
-
-                    <td>Thomas </td>
-                    <td>Hardy </td>
-                    <td>thomashardy@mail.com</td>
-                    <td>2020/12/21</td>
+                    <td>{{users.first_name}} </td>
+                    <td>{{users.last_name}}</td>
+                    <td>{{users.email}}</td>
+                    <td>{{users.datejoined}}</td>
+                    <td>{% if users.is_verified %} Yes {% else %} No {% endif %}</td>
                     <td>
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal">block</a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal">unblock</a>
+                        {% if not users.is_blocked  %}
+                        <a href="/block_user/{{ users.id }}" class="delete" data-toggle="modal">block</a>
+                        {% else %}
+                        <a href="/unblock_user/{{ users.id }}" class="edit" data-toggle="modal">unblock</a>
+                        {% endif %}
                     </td>
                 </tr>
-                <tr>
-     
-                    <td>Dominique</td>
-                    <td> Perrier</td>
-                    <td>dominiqueperrier@mail.com</td>
-                    <td>2020/12/21</td>
-                    <td>
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal">block</a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal">unblock</a>
-                    </td>
-                </tr>
-                <tr>
-
-                    <td>Maria </td>
-                    <td>Anders</td>
-                    <td>mariaanders@mail.com</td>
-                    <td>2020/12/21</td>
-
-                    <td>
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal">block</a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal">unblock</a>
-                    </td>
-                </tr>
-			
-                <tr>
-
-                    <td>Maria </td>
-                    <td>Anders</td>
-                    <td>mariaanders@mail.com</td>
-                    <td>2020/12/21</td>
-
-                    <td>
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal">block</a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal">unblock</a>
-                    </td>
-                </tr>
-                <tr>
-
-                    <td>Maria </td>
-                    <td>Anders</td>
-                    <td>mariaanders@mail.com</td>
-                    <td>2020/12/21</td>
-
-                    <td>
-                        <a href="#editEmployeeModal" class="edit" data-toggle="modal">block</a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal">unblock</a>
-                    </td>
-                </tr>
-			
+            {% endfor %}
             </tbody>
         </table>
         <div class="clearfix">
@@ -120,9 +76,6 @@
 </div>
 <script>
     import { Ripple, initMDB } from "mdb-ui-kit";
-
-    initMDB({ Ripple });</script>
-
-
-
+    initMDB({ Ripple });
+</script>
 {% endblock content1 %}
