--- a/ecom/static/css/styletable.css
+++ b/ecom/static/css/styletable.css
@@ -184,6 +184,9 @@ table.table .avatar {
 .modal .modal-dialog {
     max-width: 400px;
 }
+.new1{
+    max-width: 700px !important;
+}
 .modal .modal-header, .modal .modal-body, .modal .modal-footer {
     padding: 20px 30px;
 }
@@ -233,6 +236,12 @@ font-size: 16px;
 .image-preview {
     max-width: 100%;
     max-height: 150px; /* Adjust this value to increase or decrease the height */
+}
+.oldimg {
+    
+    padding-left: 30px !important;
+    max-width: 100% !important;
+    max-height: 50px !important; /* Adjust this value to increase or decrease the height */
 }
 @media (min-width: 300px) {
     .tbd1{
