--- a/ecom/templates/shop/shop.html
+++ b/ecom/templates/shop/shop.html
@@ -16,6 +16,7 @@
     		<div class="row">
     			<div class="col-md-8 col-lg-10 order-md-last">
     				<div class="row">
+						{% for prod in products %}
 		    			<div class="col-sm-12 col-md-12 col-lg-4  d-flex">
 		    				<div class="product d-flex flex-column">
                                 <a href="/singleproduct/" class="img-prod"><img class="img-fluid" src={% static 'images/pumashoee.jpg' %} alt="puma shoe">
@@ -23,7 +24,7 @@
                                     <div class="overlay"></div>
 		    					</a>
 		    					<div class="text py-3 pb-4 px-3">
-		    						
+									
 		    						<h3><a href="/singleproduct/">Puma Vegas high top</a></h3>
 		    						<div class="pricing">
                                         <p class="price"><span class="mr-2 price-dc">₹2000</span><span class="price-sale">₹1000</span></p>
@@ -37,6 +38,7 @@
 
 		    				</div>
 		    			</div>
+						{% endfor %}
 		    			<div class="col-sm-12 col-md-12 col-lg-4  d-flex">
 		    				<div class="product d-flex flex-column">
                                 <a href="#" class="img-prod"><img class="img-fluid" src={% static 'images/product-1.jpg' %} alt="Colorlib Template">
